<resources>
    <string name="app_name">CaseLog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="calender_lebel">No Cases on this day</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="id_doesnt_exist">ID doesn\'t exist. Your may click \'Register\' to create one</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_dialog_message">This id doesn\'t exist. If You want to Create a account click \'create\'</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="title_activity_profile_show">Profile</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_case_select">Cases To Select</string>
    <string name="title_activity_selected_cases">Selected Cases</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_note">Note</string>
    <string name="title_activity_use">How To Use</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">Authority</string>


    <!-- Profile Info -->
    <string name="name_label_profile">Name: </string>
    <string name="user_id_Label_profile">User ID: </string>
    <string name="phone_label">Phone: </string>
    <string name="email_label">Email: </string>

    <string name="name">Enter Your Name</string>
    <string name="user_id">Choose an user ID</string>
    <string name="phone">Enter a phone number</string>
    <string name="email">You may enter an email address</string>


    <!-- Strings related to Subscribe creation -->
    <string name="prompt_u_id">Choose an user ID</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
