<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/advocate" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4"
        android:useDefaultMargins="true"
        android:orientation="horizontal">


        <TextView
            android:text="@string/name_label_profile"
            />
        <TextView
            android:id="@+id/name_profile"
            android:text="@string/name"/>
        <TextView
            android:text="@string/user_id_Label_profile" />
        <TextView
            android:id="@+id/user_id_profile"
            android:text="@string/user_id"/>
        <TextView
            android:text="@string/phone_label"/>
        <TextView
            android:id="@+id/phone_profile"
            android:text="@string/phone"/>
        <TextView
            android:text="@string/email_label" />
        <TextView
            android:id="@+id/email_profile"
            android:text="@string/email"/>
    </GridLayout>


</LinearLayout>